--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Popular Movies</string>
+    <string name="app_name">Favorite Movies</string>
 
     <string name="most_popular_label">Popular Movies</string>
     <string name="top_rated_label">Top Rated Movies</string>
